<resources>
    <string name="app_name" translatable="false">MonZoo</string>
    <string name="app_banner" translatable="false">Banner</string>
    <string name="carte_titre">Carte du Zoo</string>
    <string name="carte_bonjour">Bonjour!</string>
    <string name="aquarium_titre">Carte de l\'Aquarium</string>
    <string name="popcorn_titre">Popcorn</string>
    <string name="popcorn_message">"Pas de popcorn pour les %3$s (%1$d %2$s)"</string>
    <string-array name="poissons">
        <item>saumons</item>
        <item>doradas</item>
        <item>barracudas</item>
    </string-array>

    <plurals name="popcorn_second">
        <item quantity="one">seconde</item>
        <item quantity="other">secondes</item>
    </plurals>
    <string name="accueil_soustitre">L\'app offichielle du Zoo</string>
    <string name="accueil_infos">
        Ceci est la version 1 de l\'application Android <b>officielle</b> du zoo de Labége,accescible dans le 76000m<small><sup>2</sup></small> .
        \n En cas de probléme, contac:
        \n tel. 0712345678
        \n e-mail: secretariat@ldnr.fr
    </string>
    <string name="stub" translatable="false">*******</string>
    <string name="alerte_titre">Alerte</string>
    <string name="alerte_tv_titre">Titre</string>
    <string name="alerte_tv_lieu">Lieu</string>
    <string name="alerte_tv_infos">Informations</string>
    <string name="alerte_cb_urgent">Urgent</string>
    <string name="alerte_bt_envoi">Envoyer</string>

    <string-array name="alerte_lieux" translatable="false">
        <item>Enclos de singes</item>
        <item>Enclos de tigres</item>
        <item>Voliére</item>
        <item>Buvette</item>
        <item>Aquarium</item>
        <item>Aquaparc</item>
    </string-array>

    <string name="alerte_confirmer_titre">Confirmation</string>
    <string name="alerte_confirmer_text">Voulez-vous envoyer cette alert?</string>

    <string name="accueil_menu_option">Options</string>
    <string name="accueil_menu_enregister">Enregister</string>
</resources>