<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/accueil_soustitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accueil_soustitre"
        android:gravity="center"
        android:background="#095B00"
        android:textColor="#BF3"
        android:textStyle="bold"
        android:textSize="25sp"
        android:padding="15dp"/>

    <TextView
        android:id="@+id/accueil_infos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accueil_infos"
        android:autoLink="all"/>

    <TextView
        android:id="@+id/accueil_nouvelles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stub" />
<!--
    <Button
        android:id="@+id/accueil_bt_carte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carte_titre" />

    <Button
        android:id="@+id/accueil_bt_alerte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alerte_titre" />
        -->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/accueil_bt_carte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/carte_titre"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/accueil_bt_alerte"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/alerte_titre"
        android:layout_weight="1"/>
</LinearLayout>

</LinearLayout>